# chalna

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: api-spec.md
src/chalna/: __init__.py  cli.py  db.py  exceptions.py  llm_refiner.py  models.py  pipeline.py  server.py  settings.py  srt_utils.py  validation.py  web.py
src/chalna/static/: index.html
systemd/: chalna-api.service  chalna-web.service  install.sh  uninstall.sh
tests/: __init__.py  benchmark_queue.py  test_srt_utils.py
