[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chalna"
version = "0.1.0"
description = "SRT subtitle generation service with speaker diarization (VibeVoice ASR + Qwen Forced Alignment)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jonhpark" }
]
keywords = ["asr", "srt", "subtitle", "speech-to-text", "forced-alignment"]

dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "numpy",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
chalna = "chalna.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chalna"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/external",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
